--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </section>
 
     <!-- "what we do" section -->
-    <section id="what-we-do">
+    <section id="what-we-do" class="intro">
         <h2>What We Do</h2>
         <p>
             butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumbler normcore Banksy direct trade Blue Botle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Furture Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intellegentsia umami deep v craft
