--- a/index.html
+++ b/index.html
@@ -107,8 +107,32 @@
     </section>
 
     <!-- "meet the trainers" section -->
-    <section>
-        <h2>Meet The Trainers</h2>
+    <section id="your-trainers" class="trainers">
+        <h2 class="section-title primary-border">Meet The Trainers</h2>
+        <article class="trainer">
+            <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+            <div class="trainer-bio text-left">
+                <h3>Arron Stephens</h3>
+                <h4>Speed / Strength</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium impedit aliquam error natus vel explicabo aspernatur ratione laborum fuga asperiores quae deserunt itaque, perspiciatis doloribus ipsum dolore eveniet ipsam sapiente!</p>
+            </div>
+        </article>
+        <article class="trainer">
+            <div class="trainer-bio text-right">
+                <h3>Joanna Gill</h3>
+                <h4>Endurance</h4>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam iusto dolore quos impedit labore ut vitae magni, distinctio ipsum molestiae veritatis, voluptates iure, non nihil deserunt ipsam totam nostrum repellendus.</p>
+            </div>
+            <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+        </article>
+        <article class="trainer">
+            <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+            <div class="trainer-bio text-left">
+                <h3>Harry "the Headband" Smith</h3>
+                <h4>Strenght</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas cumque rem iste animi, magnam rerum adipisci non reprehenderit culpa maxime vel recusandae, maiores quis, ipsa quae eius obcaecati? Rerum, beatae!</p>
+            </div>
+        </article>
     </section>
 
     <!-- "reach out"  section -->
