style contact info

--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
     </section>
 
     <!-- "reach out"  section -->
-    <section>
-        <h2>Reach Out</h2>
-        <div class="contact-info">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3447.147727284176!2d-97.83853628505267!3d30.232863516602283!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x865b4b4cc27a9d07%3A0x84b1684ee28b3577!2s4701%20Staggerbrush%20Rd%2C%20Austin%2C%20TX%2078749!5e0!3m2!1sen!2sus!4v1635961152159!5m2!1sen!2sus" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>"
+    <section id="reach-out" class="contact contact-info">
+        <h2 class="section-title secondary-border">Reach Out</h2>
+        <div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3447.147727284176!2d-97.83853628505267!3d30.232863516602283!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x865b4b4cc27a9d07%3A0x84b1684ee28b3577!2s4701%20Staggerbrush%20Rd%2C%20Austin%2C%20TX%2078749!5e0!3m2!1sen!2sus!4v1635961152159!5m2!1sen!2sus"  style="border:0;" allowfullscreen="" loading="lazy"></iframe>"
         </div>
         <div>
             <h3>Run Buddy</h3>
