--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
     <section class="hero">
         <div class="hero-form">
             <h3>Get Started Today</h3>
-            <p>Fill out this form and one of our trainers will schedule a consult</p>
+            <p>
+                Fill out this form and one of our trainers will schedule a consult
+            </p>
             <form>
                 <label for="name">Enter full name:</label>
                 <input type="text" placeholder="Your Name" name="name" id="name" class="form-input" />
@@ -59,9 +61,7 @@
                     </label>
                     <input type="checkbox" name="age-confirm" id="checkbox" />
                 </p>
-                <button type="submit">
-                    Get running!
-                </button>
+                <button type="submit">Get running!</button>
             </form>
         </div>
     </section>
@@ -70,10 +70,12 @@
     <section id="what-we-do" class="intro">
         <h2 class="section-title primary-border">What We Do</h2>
         <p>
-            butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumbler normcore Banksy direct
-            trade Blue Botle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd
-            Furture Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings
-            narwhal Marfa Schlitz sustainable Intellegentsia umami deep v craft
+            butcher selfies chambray shabby chic gentrify readymade yr Echo Park
+            XOXO Tumbler normcore Banksy direct trade Blue Botle chillwave you
+            probably haven't heard of them single-origin coffee Vice fanny pack
+            fixie Odd Furture Austin fingerstache pickled twee synth Wes Anderson
+            Thundercats viral bitters flannel meggings narwhal Marfa Schlitz
+            sustainable Intellegentsia umami deep v craft
         </p>
     </section>
 
@@ -96,7 +98,10 @@
         <div>
             <img src="./assets/images/step-3.svg" alt="" />
             <h3>Step 3: <span>Get Running.</span></h3>
-            <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+            <p>
+                Hit the ground running (literally) once your trainer lays out your
+                plan.
+            </p>
         </div>
 
         <div>
@@ -114,46 +119,67 @@
             <div class="trainer-bio text-left">
                 <h3>Arron Stephens</h3>
                 <h4>Speed / Strength</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium impedit aliquam error natus vel explicabo aspernatur ratione laborum fuga asperiores quae deserunt itaque, perspiciatis doloribus ipsum dolore eveniet ipsam sapiente!</p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
+                    impedit aliquam error natus vel explicabo aspernatur ratione laborum
+                    fuga asperiores quae deserunt itaque, perspiciatis doloribus ipsum
+                    dolore eveniet ipsam sapiente!
+                </p>
             </div>
         </article>
         <article class="trainer">
             <div class="trainer-bio text-right">
                 <h3>Joanna Gill</h3>
                 <h4>Endurance</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam iusto dolore quos impedit labore ut vitae magni, distinctio ipsum molestiae veritatis, voluptates iure, non nihil deserunt ipsam totam nostrum repellendus.</p>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam
+                    iusto dolore quos impedit labore ut vitae magni, distinctio ipsum
+                    molestiae veritatis, voluptates iure, non nihil deserunt ipsam totam
+                    nostrum repellendus.
+                </p>
             </div>
             <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
         </article>
         <article class="trainer">
-            <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+            <img src="./assets/images/trainer-3.jpg"
+                alt="Harry Smith wearing a headband and lifting comically small pink weights" />
             <div class="trainer-bio text-left">
                 <h3>Harry "the Headband" Smith</h3>
                 <h4>Strenght</h4>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas cumque rem iste animi, magnam rerum adipisci non reprehenderit culpa maxime vel recusandae, maiores quis, ipsa quae eius obcaecati? Rerum, beatae!</p>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas
+                    cumque rem iste animi, magnam rerum adipisci non reprehenderit culpa
+                    maxime vel recusandae, maiores quis, ipsa quae eius obcaecati?
+                    Rerum, beatae!
+                </p>
             </div>
         </article>
     </section>
 
     <!-- "reach out"  section -->
-    <section id="reach-out" class="contact contact-info">
+    <section id="reach-out" class="contact">
         <h2 class="section-title secondary-border">Reach Out</h2>
-        <div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3447.147727284176!2d-97.83853628505267!3d30.232863516602283!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x865b4b4cc27a9d07%3A0x84b1684ee28b3577!2s4701%20Staggerbrush%20Rd%2C%20Austin%2C%20TX%2078749!5e0!3m2!1sen!2sus!4v1635961152159!5m2!1sen!2sus"  style="border:0;" allowfullscreen="" loading="lazy"></iframe>"
-        </div>
-        <div>
-            <h3>Run Buddy</h3>
-            <p>Any questions or concerns before signing up?
-                <br />
-                Let us know and we'll be happy to talk to you!
-            </p>
-            <address>
-                55 Main Street <br />
-                Some Town, Ca <br />
-                12345 <br />
-                P: 555.RUN.BUDZ (555.786.2839) <br />
-                E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-            </address>
+        <div class="contact-info">
+            <div>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3447.147727284176!2d-97.83853628505267!3d30.232863516602283!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x865b4b4cc27a9d07%3A0x84b1684ee28b3577!2s4701%20Staggerbrush%20Rd%2C%20Austin%2C%20TX%2078749!5e0!3m2!1sen!2sus!4v1635961152159!5m2!1sen!2sus"
+                    style="border: 0" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+            <div>
+                <h3>Run Buddy</h3>
+                <p>
+                    Any questions or concerns before signing up?
+                    <br />
+                    Let us know and we'll be happy to talk to you!
+                </p>
+                <address>
+                    55 Main Street <br />
+                    Some Town, Ca <br />
+                    12345 <br />
+                    P: 555.RUN.BUDZ (555.786.2839) <br />
+                    E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                </address>
+            </div>
         </div>
     </section>
 
