spelling errors fix

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 alt="Harry Smith wearing a headband and lifting comically small pink weights" />
             <div class="trainer-bio text-left">
                 <h3>Harry "the Headband" Smith</h3>
-                <h4>Strenght</h4>
+                <h4>Strength</h4>
                 <p>
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas
                     cumque rem iste animi, magnam rerum adipisci non reprehenderit culpa
