add content to hero, replace image

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
 
     <!-- hero/jumbotron -->
     <section class="hero">
+        <div class="hero-cta">
+            <h2>Start Building Habits.</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid debitis odio, enim quibusdam cupiditate molestiae repellendus libero vitae laborum? Cum, quo adipisci, magnam reprehenderit unde cumque, quas commodi incidunt similique ullam recusandae. Velit quam nesciunt impedit obcaecati sapiente numquam cupiditate eum ratione quas tempore. Dolores nesciunt quae earum sed voluptatem.
+            </p>
+        </div>
         <div class="hero-form">
             <h3>Get Started Today</h3>
             <p>
