add flexbox to intro and headers

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
         <div class="hero-cta">
             <h2>Start Building Habits.</h2>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid debitis odio, enim quibusdam cupiditate molestiae repellendus libero vitae laborum? Cum, quo adipisci, magnam reprehenderit unde cumque, quas commodi incidunt similique ullam recusandae. Velit quam nesciunt impedit obcaecati sapiente numquam cupiditate eum ratione quas tempore. Dolores nesciunt quae earum sed voluptatem.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid debitis odio, enim quibusdam
+                cupiditate molestiae repellendus libero vitae laborum? Cum, quo adipisci, magnam reprehenderit unde
+                cumque, quas commodi incidunt similique ullam recusandae. Velit quam nesciunt impedit obcaecati sapiente
+                numquam cupiditate eum ratione quas tempore. Dolores nesciunt quae earum sed voluptatem.
             </p>
         </div>
         <div class="hero-form">
@@ -74,7 +77,10 @@
 
     <!-- "what we do" section -->
     <section id="what-we-do" class="intro">
-        <h2 class="section-title primary-border">What We Do</h2>
+        <div class="flex-row">
+            <h2 class="section-title primary-border">What We Do</h2>
+        </div>
+        <div class="flex-row">
         <p>
             butcher selfies chambray shabby chic gentrify readymade yr Echo Park
             XOXO Tumbler normcore Banksy direct trade Blue Botle chillwave you
@@ -83,11 +89,14 @@
             Thundercats viral bitters flannel meggings narwhal Marfa Schlitz
             sustainable Intellegentsia umami deep v craft
         </p>
+    </div>
     </section>
 
     <!-- "what you do" section -->
     <section id="what-you-do" class="steps">
-        <h2 class="section-title secondary-border">What You Do</h2>
+        <div class="flex-row">
+            <h2 class="section-title secondary-border">What You Do</h2>
+        </div>
 
         <div>
             <img src="./assets/images/step-1.svg" alt="" />
@@ -119,7 +128,9 @@
 
     <!-- "meet the trainers" section -->
     <section id="your-trainers" class="trainers">
-        <h2 class="section-title primary-border">Meet The Trainers</h2>
+        <div class="flex-row">
+            <h2 class="section-title primary-border">Meet The Trainers</h2>
+        </div>
         <article class="trainer">
             <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
             <div class="trainer-bio text-left">
@@ -164,7 +175,9 @@
 
     <!-- "reach out"  section -->
     <section id="reach-out" class="contact">
-        <h2 class="section-title secondary-border">Reach Out</h2>
+        <div class="flex-row">
+            <h2 class="section-title secondary-border">Reach Out</h2>
+        </div>
         <div class="contact-info">
             <div>
                 <iframe
