--- a/index.html
+++ b/index.html
@@ -146,60 +146,64 @@
             <div class="step-info">
                 <div class="step-img">
                     <img src="./assets/images/step-4.svg" alt="" />
-                    </div>
-                    <div class="step-text">
-                        <h4>See Results.</h4>
-                        <p>Bi-weekly checkins with your trainer will keep you focused.</p>
-                    </div>
+                </div>
+                <div class="step-text">
+                    <h4>See Results.</h4>
+                    <p>Bi-weekly checkins with your trainer will keep you focused.</p>
                 </div>
             </div>
+        </div>
     </section>
 
     <!-- "meet the trainers" section -->
-    <section id="your-trainers" class="trainers">
+    <section id="your-trainers">
         <div class="flex-row">
             <h2 class="section-title primary-border">Meet The Trainers</h2>
         </div>
-        <article class="trainer">
-            <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-            <div class="trainer-bio text-left">
-                <h3>Arron Stephens</h3>
-                <h4>Speed / Strength</h4>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
-                    impedit aliquam error natus vel explicabo aspernatur ratione laborum
-                    fuga asperiores quae deserunt itaque, perspiciatis doloribus ipsum
-                    dolore eveniet ipsam sapiente!
-                </p>
-            </div>
-        </article>
-        <article class="trainer">
-            <div class="trainer-bio text-right">
-                <h3>Joanna Gill</h3>
-                <h4>Endurance</h4>
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam
-                    iusto dolore quos impedit labore ut vitae magni, distinctio ipsum
-                    molestiae veritatis, voluptates iure, non nihil deserunt ipsam totam
-                    nostrum repellendus.
-                </p>
-            </div>
-            <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
-        </article>
-        <article class="trainer">
-            <img src="./assets/images/trainer-3.jpg"
-                alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-            <div class="trainer-bio text-left">
-                <h3>Harry "the Headband" Smith</h3>
-                <h4>Strength</h4>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas
-                    cumque rem iste animi, magnam rerum adipisci non reprehenderit culpa
-                    maxime vel recusandae, maiores quis, ipsa quae eius obcaecati?
-                    Rerum, beatae!
-                </p>
-            </div>
-        </article>
+        <div class="trainers">
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg"
+                    alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Arron Stephens</h3>
+                    <h4 class="trainer-role">Speed / Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
+                        impedit aliquam error natus vel explicabo aspernatur ratione laborum
+                        fuga asperiores quae deserunt itaque, perspiciatis doloribus ipsum
+                        dolore eveniet ipsam sapiente!
+                    </p>
+                </div>
+            </article>
+            <article class="trainer">
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Joanna Gill</h3>
+                    <h4 class="trainer-role">Endurance</h4>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam
+                        iusto dolore quos impedit labore ut vitae magni, distinctio ipsum
+                        molestiae veritatis, voluptates iure, non nihil deserunt ipsam totam
+                        nostrum repellendus.
+                    </p>
+                </div>
+
+            </article>
+            <article class="trainer">
+                <img src="./assets/images/trainer-3.jpg"
+                    alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Harry "the Headband" Smith</h3>
+                    <h4 class="trainer-role">Strength</h4>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas
+                        cumque rem iste animi, magnam rerum adipisci non reprehenderit culpa
+                        maxime vel recusandae, maiores quis, ipsa quae eius obcaecati?
+                        Rerum, beatae!
+                    </p>
+                </div>
+            </article>
+        </div>
     </section>
 
     <!-- "reach out"  section -->
